# turboquant-mlx

./: .gitignore  README.md  demo_7b.py  demo_mlx_lm.py  pyproject.toml
scripts/: bench_long_context.py  bench_real_model.py  bench_sparse_v.py
tests/: test_core.py  test_fused_attn.py  test_metal.py  test_sparse_v.py  test_speed.py
turboquant_mlx/: __init__.py  adaptive.py  cache.py  fused_attention.py  hybrid_cache.py  kernels.py  metal.py  metal_kernels_v4.py  patch.py  sparse_v.py  v_only_cache.py
